--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -32,7 +32,7 @@ them.
 |No./Nr. | Nummero/Nummer|number
 |===
 
-[cols="1a,1a",frame=none,grid=none]
+[cols="1a,1a",frame=none]
 |===
 |Transliteration|Translation
 
