--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -45,8 +45,8 @@ Fürstl. Rentkammer hat lt[laut] Kaufbrief vom 17. April a.c. von dem Colon Krü
 Nr. 10 in Berenbusch ein in der s. g. Söhre belegenes, 9 Morgen 19 R haltendes Grundstück
 für die Summe von 858 Rthlr 10 Ggr 2 Pf Cour. angekauft.
 
-K. Rmstr. Berger wird angewiesen, obige Kaufgelder, wovon jedoch ein dem Colon Krückeberg
-lt. Oblig. vom 12. Janr 1842 aus Kammerkasse geleistetes Darlehn von 200 Rthlr Cour. nebst
+K[ammer] Rmstr[Rentmeister]. Berger wird angewiesen, obige Kaufgelder, wovon jedoch ein dem Colon Krückeberg
+lt. Oblig[ation]. vom 12. Janr 1842 aus Kammerkasse geleistetes Darlehn von 200 Rthlr Cour. nebst
 Zinsen zurückzubehalten ist, dem Verkäufer gegen Quittung auszuzahlen, in Kammerrechnung
 gehörigen Orts zu verausgeben und diese Ausgabe mit dieser Quittung zu belegen.
 |
