--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -63,3 +63,5 @@ however, the loan of 200 Reichsthaler in current money at face value granted to 
 promissory note of 12 January 1842, from the chamber treasury, together with interest—to record the disbursement at
 the proper place in the chamber accounts and to support this expenditure with that receipt.
 |===
+
+*TODO:* One more two-page document.
