--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -64,4 +64,75 @@ promissory note of 12 January 1842, from the chamber treasury, together with int
 the proper place in the chamber accounts and to support this expenditure with that receipt.
 |===
 
-*TODO:* One more two-page document.
+*TODO:* Finish the two-page document and the smaller document before it.
+
+
+== Smaller Document
+
+
+== NC 2696
+
+....
+Left margin:
+
+N. C. 2696.
+ohtt
+Cpt
+an Kammerrentmeister Berger
+dahier.
+
+Probatur.
+Eingetragen. Die Stückzinsen
+sind v. 12./1 bis 28/4 1845 (3 1/2 Mt.)
+2 rt 12 gdr aus Kammerkasse geliehenen
+gezählt mit ____ 2 rt 12 gd
+Poppelbaum
+
+exp Schöttds
+8/5.
+
+                           Die Obligation vom 12.
+                           Januar 1842 über die dem Col.
+                           Krückeberg Nr. 10 in Berenbusch
+                           aus Kammerkasse geliehenen
+                           200 x Cour. wird mit Quittung
+                           versehen dem p Berger unter
+                           Bezugnahme auf die Anweisung
+                           vom 21. pr. zur Übergabe an
+                           Kruckeberg nach stattgefundener
+                           Liquidation) hierneben zugestellt,
+                           [struck-through text omitted]
+                           Bburg 5. Mai 1845
+                             F.p.
+                           
+                             Spm       L 
+                                         verte
+                           
+// This left margin text appears to be a replacment
+// for the remaining text that has been struck-through.
+kann cestiren, da
+die Verrechnung in neben-
+stehender Weise bereits
+Fr. der Wahlmeckwart
+....
+
+Back side:
+....
+          ohld                   
+Concept                   
+Quittung.                   
+                   Da der Colon Krückeberg
+                   das in verstehender Obligation
+                   vom 12. Januar 1842 verbriefte
+exp                Kapital ad 200. r. Cur. nebst
+                   rückständigen und laufenden
+                   Zinsen durch Zurechnung in die
+                   Kammerkasse zurückgezahlt hat,
+                   Er wird darüber hiermit zuittirt
+                   und in die Löschung der Hypothek
+                   gewilligt.
+                   Bburg 5. Mai 1845.
+                   (L.S.) F. p.
+
+                                     L
+....
