--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -65,10 +65,10 @@ the proper place in the chamber accounts and to support this expenditure with th
 |===
 
 
-== Smaller Documents
+== TODO: Finish These Physically Smaller Documents
 
 
-== NC 2696
+=== NC 2696
 
 First page of NC 2696:
 
