--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -9,8 +9,7 @@
 
 == Transliteration and Translation
 
-There are numerous abbrevations used in *NC 2422* below. This table summarizes
-them.
+There are numerous abbrevations used in *NC 2422*. This table summarizes them.
 
 [cols="2,3,4",width="60%",options="header"]
 |===
