--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -64,7 +64,7 @@ the proper place in the chamber accounts and to support this expenditure with th
 |===
 
 
-== TODO: Finish These Physically Smaller Documents
+== TODO: Finish The Remaing Documents Below
 
 
 === NC 2696
