--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -77,7 +77,62 @@ First page of NC 2696:
 
 |
 ....
-TODO
+NC. 2696.
+pr. in C. 29/4 45
+
+An
+Fürstl. Rentkammer
+
+
+//left margin text:
+H.
+Die Obligation qui[t]iert wäre
+mit folgender Quittung.
+daß der 1. Krückebung
+das Capital mit rückstande
+u. laufende Zinsen durch
+Zurechnung in die Kamer,
+caße zurükgezahlt
+habe, u. daher in die
+Löschung der Hypothek
+gewilligt werde
+versehen, dem K. Rmstr.
+unter Bezugnahme auf
+zu beziehenden Kaufgeldern
+Anweisung vom
+die  Anweisung, vom
+Zur Uebergabe an Krükeberg nach Statt gefundener Liquidation
+21 pr zuzustellen, welche
+dahin vervollständigt
+werden, daß das fragl.
+Capital der 200 p als
+zurückgezählt nebst
+rückständigen u. laufenden
+Zinsen in der Kk. zu
+vereinnahmen, und
+dagegen das vollständige
+Kaufgeld mit 858 p 10 [unles.] 2 g
+in Ausgabe zu stellen.
+sei.  Bburg 2/5 45
+         [Cunier or Reck]
+
+
+// Right margin text:
+Da der Kolon Krückeberg
+N. 10 in Berenbusch des
+aus der Kammerkasse ge-
+liehen erhaltene Kapital
+von 200 p Courant von
+den der Fürstl. Rentkam̅mer
+verkauften Ländereien
+zu beziehenden Kaufgeldern
+zurückzahlen wird, so bitte
+ich unterthänigst, die be-
+treffende Obligation über
+200 p Cour vom 12 Jan 1842
+zurückgeben zu laßen.
+Bückeburg 29 Apr 1845
+            Berger
 
 ....
 |
