--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -148,7 +148,7 @@ Bückeburg 29 Apr 1845
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
 |image::24-l.png[link=self]
-|
+|image::24-r.png[link=self]
 |===
 
 
