--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -186,7 +186,7 @@ Bezugnahme auf die Anweisung
 vom 21. pr. zur Übergabe an
 Kruckeberg nach stattgefundener
 Liquidation) hierneben zugestellt,
-[struck-through text omitted]
+[struck-through that was below omitted]
 Bburg 5. Mai 1845
   F.p.
 
