--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -90,26 +90,24 @@ pr. in C. 29/4 45
 An
 Fürstl. Rentkammer
 
-
-[left side text:]
 H.
-Die Obligation qui[t]iert wäre
+Die Obligation quitiert wäre
 mit folgender Quittung.
 daß der 1. Krückebung
 das Capital mit rückstande
-u. laufende Zinsen durch
-Zurechnung in die Kamer,
-caße zurükgezahlt
-habe, u. daher in die
+u[nd] laufende Zinsen durch
+Zurechnung in die Kammer-
+casse zurükgezahlt
+habe, u[nd] daher in die
 Löschung der Hypothek
-gewilligt werde
-versehen, dem K. Rmstr.
+gewilligt werde;
+versehen, dem K. Rmstr[Kammer Rentmeister]
 unter Bezugnahme auf
-zu beziehenden Kaufgeldern
-Anweisung vom
 die  Anweisung, vom
-Zur Uebergabe an Krükeberg nach Statt gefundener Liquidation
-21 pr zuzustellen, welche
+zu beziehenden Kaufgeldern
+die Anweisung vom
+21 pr, zur Uebergabe an Krükeberg nach Statt gefundener Liquidation,
+zuzustellen, welche
 dahin vervollständigt
 werden, daß das fragl.
 Capital der 200 p als
@@ -118,7 +116,7 @@ rückständigen u. laufenden
 Zinsen in der Kk. zu
 vereinnahmen, und
 dagegen das vollständige
-Kaufgeld mit 858 p 10 [unles.] 2 g
+Kaufgeld mit 858 R 10 G 2 Pf
 in Ausgabe zu stellen.
 sei.  Bburg 2/5 45
          [Cunier or Reck]
