--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -95,7 +95,7 @@ the proper place in the chamber accounts and to support this expenditure with th
 |===
 |Transliteration (diplomatic) |English translation
 
-|*Right-side request (large hand; incl. heading)*
+|*Right-side request (large hand; includes heading)*
 ....
 An
 Fürstl. Rentkammer
