--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -31,23 +31,46 @@ There are numerous abbrevations used in *NC 2422*. This table summarizes them.
 |No./Nr. | Nummero/Nummer|number
 |===
 
+[cols="1a,3a",frame=ends,grid=rows]
+|===
+2+|*Docketing marks*
+
+|NC. 2696.
+|**Meaning:** Rentkammer registry/file number (NC-series). +
+**Placement:** Top-left header. +
+**When/By whom:** Clerk at registration (after the letter was received). 
+|===
+
 [cols="1a,1a"]
 |===
 |Transliteration|Translation
 
 |
 NC. 2422. +
-Abschrift Anweisung der Kammer für den Kammerrentmeister Berger
+....
+Abschrift Anweisung der Kammer
+für den Kammerrentmeister Berger
 d. d. Bückeb. d. 21. April 1845
 
-Fürstl. Rentkammer hat lt[laut] Kaufbrief vom 17. April a.c. von dem Colon Krückeberg
-Nr. 10 in Berenbusch ein in der s. g. Söhre belegenes, 9 Morgen 19 R haltendes Grundstück
-für die Summe von 858 Rthlr 10 Ggr 2 Pf Cour. angekauft.
+Fürstl. Rentkammer hat lt[laut] Kaufbrief vom
+17. April a.c. von dem Colon Krückeberg
+Nr. 10 in Berenbusch ein in der s. g.
+Söhre belegenes, 9 Morgen 19 R haltendes
+Grundstück für die Summe von 858 Rthlr 10 Ggr
+2 Pf Cour. angekauft.
 
-K[ammer] Rmstr[Rentmeister]. Berger wird angewiesen, obige Kaufgelder, wovon jedoch ein dem Colon Krückeberg
-lt. Oblig[ation]. vom 12. Janr 1842 aus Kammerkasse geleistetes Darlehn von 200 Rthlr Cour. nebst
-Zinsen zurückzubehalten ist, dem Verkäufer gegen Quittung auszuzahlen, in Kammerrechnung
-gehörigen Orts zu verausgeben und diese Ausgabe mit dieser Quittung zu belegen.
+K[ammer] Rmstr[Rentmeister]. Berger wird angewiesen,
+obige Kaufgelder, wovon jedoch ein
+dem Colon Krückeberg lt. Oblig[ation]. vom
+12. Janr 1842 aus Kammerkasse gelei-
+stetes Darlehn von 200 Rthlr Cour. nebst
+Zinsen zurückzubehalten ist, dem Ver-
+käufer gegen Quittung auszuzahlen, 
+in Kammerrechnung gehörigen
+Orts zu verausgeben und diese
+Ausgabe mit dieser Quittung
+zu belegen.
+....
 |
 NC. 2422. +
 Copy. Order of the Chamber for the chamber treasurer Berger
