--- a/modules/689/pages/doc-10.adoc
+++ b/modules/689/pages/doc-10.adoc
@@ -3,8 +3,8 @@
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::21-r.png[link=self]
-|image::22.png[link=self]
+|image::21-r.png[title="Click to Enlarge",link=self]
+|image::22.png[title="Click to Enlarge",link=self]
 |===
 
 == Transliteration and Translation
@@ -92,7 +92,7 @@ the proper place in the chamber accounts and to support this expenditure with th
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::23-r.png[link=self]
+|image::23-r.png[title="Click to Enlarge",link=self]
 |
 |===
 
@@ -185,8 +185,8 @@ Bückeburg, 2 May 1845. — Reck
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::24-l.png[link=self]
-|image::24-r.png[link=self]
+|image::24-l.png[title="Click to Enlarge",link=self]
+|image::24-r.png[title="Click to Enlarge",link=self]
 |===
 
 
