--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -149,7 +149,7 @@ Collegium, shows that the Rentcammer’s board itself acted on the clerk’s opi
 petition is to be rejected.” In short: the numbers didn’t convince the authorities that a rescue loan was secure,
 and the risk of a forced sale remaimed imminent.
 
-image::09-r.png[link=self]
+image::09-r.png[title="Click to Enlarge",link=self]
 
 === Transliteration and Translation
 
@@ -236,7 +236,7 @@ The cover slip for Document 3 records the Rentcammer’s brief resolution: _"The
 initials and the notation “Copt an den Colon Krückeberg N. 10 in Berenbusch”, showing that a copy of the decision
 was dispatched to him.
 
-image::10-l.png[link=self]
+image::10-l.png[title="Click to Enlarge",link=self]
 
 === Transliteration and Translation
 
