--- a/modules/689/pages/service-slip-july-10-1841.adoc
+++ b/modules/689/pages/service-slip-july-10-1841.adoc
@@ -1,7 +1,7 @@
 = Service of the Decree (Bescheid) — 27 July 1841 (re: Doc 1i, 10 July 1841)
 
 
-image::07-l.png[link=self]
+image::07-l.png[title="Click to Enlarge",link=self]
 
 == Transliteration and Translation
 
