--- a/modules/689/pages/doc-09.adoc
+++ b/modules/689/pages/doc-09.adoc
@@ -3,7 +3,7 @@
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
-|image::20-r.png[link=self]
+|image::20-r.png[title="Click to Enlarge",link=self]
 |
 |===
 
