--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -3,7 +3,7 @@
 
 [cols="1a,1a",options="noheader",frame=none.grid=none]
 |===
-|image::01-r.png[link=self]
+|image::01-r.png[title="Click to Enlarge",link=self]
 |
 |===
 
