--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -110,7 +110,7 @@ In tiefster Ehrfurcht ersterbend
 Ew. Durchlaucht
 
 unterthänigster,
-Colen Krückeberg
+Colon Krückeberg
 Nr 10 in Berenbusch.                           
 
 Buckeburg                  
