--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -164,6 +164,6 @@ In older German legal language (in contumaciam), it meant:
 
 * So the court decided the matter without hearing their side and in favor of the other party.
 
-So in your Krückeberg document, when the clerk writes _contum._, he’s noting that the judgment was rendered
+So when the clerk writes _contum._, he’s noting that the judgment was rendered
 because of *Krückeberg’s non-appearance (or non-response)*, not after a contested hearing.
 ====
